--- a/appstate.json
+++ b/appstate.json
@@ -1,1 +1,110 @@
-এখানের টেক্সট গুলো কেটে আপনার ফেসবুক আইডির কুকি বসান ✅
+[
+    {
+        "key": "datr",
+        "value": "oYwJaaikrhmfnE4y_suVdPTL",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-11-05T11:18:08.267Z",
+        "lastAccessed": "2025-11-05T11:18:08.267Z"
+    },
+    {
+        "key": "sb",
+        "value": "oowJaUp_OfIwH9oRGnH4Vp3i",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-11-05T11:18:08.267Z",
+        "lastAccessed": "2025-11-05T11:18:08.267Z"
+    },
+    {
+        "key": "c_user",
+        "value": "100089010897349",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-11-05T11:18:08.267Z",
+        "lastAccessed": "2025-11-05T11:18:08.267Z"
+    },
+    {
+        "key": "xs",
+        "value": "15%3Adbub4XaqxtDaVg%3A2%3A1762233565%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-11-05T11:18:08.267Z",
+        "lastAccessed": "2025-11-05T11:18:08.267Z"
+    },
+    {
+        "key": "locale",
+        "value": "en_US",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-11-05T11:18:08.267Z",
+        "lastAccessed": "2025-11-05T11:18:08.267Z"
+    },
+    {
+        "key": "pas",
+        "value": "100089010897349%3AC7MVD11VsJ",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-11-05T11:18:08.267Z",
+        "lastAccessed": "2025-11-05T11:18:08.267Z"
+    },
+    {
+        "key": "vpd",
+        "value": "v1%3B767x393x2.75",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-11-05T11:18:08.267Z",
+        "lastAccessed": "2025-11-05T11:18:08.267Z"
+    },
+    {
+        "key": "fr",
+        "value": "0sBmeWa8w0A5C0hmC.AWcO8WayNPBzoaq-ACH6inL4h0Rzz6m4QMylp_wp5UcL4UGI7jc.BpCYyi..AAA.0.0.BpCzJm.AWdMCtzYqiC2Ps4rOMi5yiOvLXI",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-11-05T11:18:08.267Z",
+        "lastAccessed": "2025-11-05T11:18:08.267Z"
+    },
+    {
+        "key": "ps_l",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-11-05T11:18:08.267Z",
+        "lastAccessed": "2025-11-05T11:18:08.267Z"
+    },
+    {
+        "key": "ps_n",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-11-05T11:18:08.267Z",
+        "lastAccessed": "2025-11-05T11:18:08.267Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "100424652%3BT%3A29372357",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-11-05T11:18:08.267Z",
+        "lastAccessed": "2025-11-05T11:18:08.267Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2974%3Btimestamp%3A1762341478",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-11-05T11:18:08.267Z",
+        "lastAccessed": "2025-11-05T11:18:08.267Z"
+    }
+      ]
