--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-11-05T11:18:08.267Z",
-        "lastAccessed": "2025-11-05T11:18:08.267Z"
+        "creation": "2025-11-06T15:39:07.427Z",
+        "lastAccessed": "2025-11-06T15:39:07.427Z"
     },
     {
         "key": "sb",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-11-05T11:18:08.267Z",
-        "lastAccessed": "2025-11-05T11:18:08.267Z"
+        "creation": "2025-11-06T15:39:07.427Z",
+        "lastAccessed": "2025-11-06T15:39:07.427Z"
     },
     {
         "key": "c_user",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-11-05T11:18:08.267Z",
-        "lastAccessed": "2025-11-05T11:18:08.267Z"
+        "creation": "2025-11-06T15:39:07.427Z",
+        "lastAccessed": "2025-11-06T15:39:07.427Z"
     },
     {
         "key": "xs",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-11-05T11:18:08.267Z",
-        "lastAccessed": "2025-11-05T11:18:08.267Z"
+        "creation": "2025-11-06T15:39:07.427Z",
+        "lastAccessed": "2025-11-06T15:39:07.427Z"
     },
     {
         "key": "locale",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-11-05T11:18:08.267Z",
-        "lastAccessed": "2025-11-05T11:18:08.267Z"
+        "creation": "2025-11-06T15:39:07.427Z",
+        "lastAccessed": "2025-11-06T15:39:07.427Z"
     },
     {
         "key": "pas",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-11-05T11:18:08.267Z",
-        "lastAccessed": "2025-11-05T11:18:08.267Z"
+        "creation": "2025-11-06T15:39:07.427Z",
+        "lastAccessed": "2025-11-06T15:39:07.427Z"
     },
     {
         "key": "vpd",
@@ -59,52 +59,34 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-11-05T11:18:08.267Z",
-        "lastAccessed": "2025-11-05T11:18:08.267Z"
+        "creation": "2025-11-06T15:39:07.427Z",
+        "lastAccessed": "2025-11-06T15:39:07.427Z"
     },
     {
         "key": "fr",
-        "value": "0sBmeWa8w0A5C0hmC.AWcO8WayNPBzoaq-ACH6inL4h0Rzz6m4QMylp_wp5UcL4UGI7jc.BpCYyi..AAA.0.0.BpCzJm.AWdMCtzYqiC2Ps4rOMi5yiOvLXI",
+        "value": "0sBmeWa8w0A5C0hmC.AWcY01ekZYsvvEMm-2dnGdk8LzUoYiRAdrSyZB1ua3c-gv52LzA.BpCYyi..AAA.0.0.BpDMEQ.AWe352YgORDe5wAPKzledFBMb6k",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-11-05T11:18:08.267Z",
-        "lastAccessed": "2025-11-05T11:18:08.267Z"
-    },
-    {
-        "key": "ps_l",
-        "value": "1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-11-05T11:18:08.267Z",
-        "lastAccessed": "2025-11-05T11:18:08.267Z"
-    },
-    {
-        "key": "ps_n",
-        "value": "1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-11-05T11:18:08.267Z",
-        "lastAccessed": "2025-11-05T11:18:08.267Z"
+        "creation": "2025-11-06T15:39:07.427Z",
+        "lastAccessed": "2025-11-06T15:39:07.427Z"
     },
     {
         "key": "fbl_st",
-        "value": "100424652%3BT%3A29372357",
+        "value": "100425880%3BT%3A29374058",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-11-05T11:18:08.267Z",
-        "lastAccessed": "2025-11-05T11:18:08.267Z"
+        "creation": "2025-11-06T15:39:07.427Z",
+        "lastAccessed": "2025-11-06T15:39:07.427Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2974%3Btimestamp%3A1762341478",
+        "value": "v2%3Bclient_version%3A2975%3Btimestamp%3A1762443536",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-11-05T11:18:08.267Z",
-        "lastAccessed": "2025-11-05T11:18:08.267Z"
+        "creation": "2025-11-06T15:39:07.427Z",
+        "lastAccessed": "2025-11-06T15:39:07.427Z"
     }
-      ]
+]
